<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <!--  TODO create a variable of type "CatListView"-->

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ListFragment">

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/list_fragment_instructions"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO add the attribute to connect with the imageUrl in the viewModel and also with the Binding Adapter-->
        <ImageView
            android:id="@+id/cat_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/cat_name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions" />

        <TextView
            android:id="@+id/cat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/cat_name"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cat_image" />

        <!-- TODO add the attribute to connect with CuteClicked() in the viewModel-->
        <Button
            android:id="@+id/cute_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="#86D548"
            android:text="@string/cute_button_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/not_cute_button"
            app:layout_constraintTop_toBottomOf="@+id/cat_name" />

        <!-- TODO add the attribute to connect with notCuteClicked() in the viewModel-->
        <Button
            android:id="@+id/not_cute_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#F8774B"
            android:text="@string/not_cute_button_label"
            app:layout_constraintEnd_toStartOf="@+id/cute_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cat_name" />

        <TextView
            android:id="@+id/not_cute_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="19dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/cute_score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/not_cute_button" />

        <TextView
            android:id="@+id/cute_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="89dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/not_cute_score"
            app:layout_constraintTop_toBottomOf="@+id/cute_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
